# desk

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
src/: app.rs  args.rs  error.rs  generate_name.rs  lib.rs  main.rs  note.rs  state.rs
