[package]
name = "desk"
version = "0.1.0"
edition = "2021"
description = "Quickly store data on the command line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.2", features = ["cargo", "derive"] }
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
