[package]
name = "notiz"
version = "1.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/silvasch/notiz"
description = "Quickly store data on the command line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
chrono = { version = "0.4.35", features = ["serde"] }
clap = { version = "4.5.2", features = ["cargo", "derive"] }
rand = "0.8.5"
serde = { version = "1.0.197", features = ["derive"] }
toml = "0.8.10"
xdg = "2.5.2"
